fixed reverse not found error , path urls should always be at the same line , othwise it's not defined git statusgit status

--- a/to-do/todo_app/templates/base.html
+++ b/to-do/todo_app/templates/base.html
@@ -28,7 +28,8 @@
 
     <div>
 
-        <h1 onclick="location.href='{% url "index" %}'">
+        <h1 onclick="location.href='{% url 'index' %}'">
+
 
             Django To-do Lists
 
