--- a/to-do/todo_app/templates/todo_app/index.html
+++ b/to-do/todo_app/templates/todo_app/index.html
@@ -23,7 +23,7 @@
 
             role="button"
 
-            onclick="location.href='{% url "list" todolist.id %}'">
+            onclick="location.href='{% url 'list' todolist.id %}'">
 
             {{ todolist.title }}
 
