added link into index template added links into todo list template created two more templates todoitem_form.html & todolist_form.html Key error raised , not solved.

--- a/to-do/todo_app/templates/todo_app/index.html
+++ b/to-do/todo_app/templates/todo_app/index.html
@@ -39,5 +39,13 @@
 
 </ul>
 
+<p>
+    <input
+        value="Add a new list"
+        type="button"
+        onclick="location.href='{% url "list-add" %}'">
+</p>
+
+
 
 {% endblock %}
