- added delete item/list views . - added delete item / list routes at urls.py - added added two delete confiratiom templates ,list/item - updated templates todo_list , todoitem_form by adding delete buttons. - fixed a typo as base template.

--- a/to-do/todo_app/templates/base.html
+++ b/to-do/todo_app/templates/base.html
@@ -17,7 +17,7 @@
 
     <!--Simple.css-->
 
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
 
     <title>Django To-do Lists</title>
 
