--- a/to-do/todo_app/templates/todo_app/todo_list.html
+++ b/to-do/todo_app/templates/todo_app/todo_list.html
@@ -61,8 +61,14 @@
 
                 type="button"
 
-                onclick="location.href='{% url "item-add" todo_list.id %}'"
-                />
+                onclick="location.href='{% url "item-add" todo_list.id %}'"/>
+            <input
+            
+            value="Delete this list"
+            
+            type="button"
+            
+            onclick="location.href='{% url "list-delete" todo_list.id %}'" />
 
         </p>
 
