--- a/to-do/todo_app/templates/todo_app/todoitem_form.html
+++ b/to-do/todo_app/templates/todo_app/todoitem_form.html
@@ -31,6 +31,13 @@
         type="button"
 
         onclick="location.href='{% url "list" todo_list.id %}'">
+    {% if object %}
+        <input
+            value="Delete this item"
+            type="button"
+            onclick="location.href=
+            '{% url "item-delete" todo_list.id object.id %}'">
+    {% endif %}
 
 </form>
 
